--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mysql2": "^3.13.0",
+    "sequelize": "^6.37.6",
+    "sqlite3": "^5.1.7"
   },
   "name": "midterm-exam-solution",
   "version": "1.0.0",
